--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HomeSmart</title>
 </head>
+<!-- dark:text-neutral-200   dark:bg-neutral-800-->
 
-<body class="max-w-[2000px] mx-auto text-neutral-200 bg-white dark:bg-neutral-800">
-    <div id="app"></div>
+<body class="max-w-[2000px] mx-auto text-neutral-900 bg-white">
+    <nav class="mx-auto p-4 bg-amber-400"></nav>
     <script type="module" src="/main.js"></script>
 </body>
 
