--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
 <!-- dark:text-neutral-200   dark:bg-neutral-800-->
 
 <body class="max-w-[2000px] mx-auto text-neutral-900 bg-white">
-    <nav class="mx-auto p-4 bg-amber-400"></nav>
+    <nav class="mx-auto p-4 bg-amber-400">
+        <div class="container mx-auto flex items-center justify-between">
+            <a href="/" class="
+          focus:outline-none
+          focus-visible:ring-4
+          ring-neutral-900
+          rounded-sm
+          ring-offset-4
+          ring-offset-amber-400
+          lg:absolute
+          lg:left-1/2
+          lg:-translate-x-1/2
+          lg:top-9
+          z-50
+          hover:opacity-75
+          transition-opacity
+        " aria-label="Go to homepage">
+                <img src="./assets/logo.svg" width="200" class="w-48 md:w-64 lg:w-72" alt="Home Smart Logo">
+            </a>
+        </div>
+    </nav>
     <script type="module" src="/main.js"></script>
 </body>
 
