--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
         " aria-label="Go to homepage">
                 <img src="./assets/logo.svg" width="200" class="w-48 md:w-64 lg:w-72" alt="Home Smart Logo">
             </a>
+
+            <button id="menu" class="
+            lg:hidden
+            focus:outline-none
+            focus-visible:ring-4
+            ring-neutral-900
+            rounded-sm
+            ring-offset-4
+            ring-offset-amber-400
+            ">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+          </svg>
+          
+         </button>
         </div>
     </nav>
     <script type="module" src="/main.js"></script>
