--- a/index.html
+++ b/index.html
@@ -46,7 +46,28 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
           
-         </button>
+         </button >
+
+         <div role="menubar" class="
+         flex
+         flex-col
+         gap-4
+         absolute
+         right-0
+         left-0
+         top-16
+         bg-amber-400
+         shadow-xl
+         text-center
+         text-lg
+         p-6
+         ">
+           <a role="menuitem" href="/">Home</a>
+           <a role="menuitem" href="/">Home</a>
+           <a role="menuitem" href="/">Home</a>
+           <a role="menuitem" href="/">Home</a>
+           
+         </div>
         </div>
     </nav>
     <script type="module" src="/main.js"></script>
