Expand Menu BAr

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             text-neutral-900
             hover:text-neutral-600
             transition-colors
-            ">
+            " aria-expanded="false" aria-label="Open Menu">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
@@ -49,7 +49,7 @@
          </button >
 
          <div role="menubar" class="
-         flex
+         hidden
          flex-col
          gap-4
          absolute
