--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@
          </div>
         </div>
     </nav>
+    <header>
+      <div></div>
+      <div class="container">
+        <img src="./assets/couch.png" alt="Coach">
+        <img src="./assets/app.svg" alt="app">
+      </div>
+    </header>
     <script type="module" src="/main.js"></script>
 </body>
 
