--- a/index.html
+++ b/index.html
@@ -139,8 +139,18 @@
          </div>
         </div>
     </nav>
-    <header>
-      <div></div>
+    <header class="relative pt-16 md:pt-24 lg:pt-48">
+      <div class="
+      absolute
+      inset-0
+      bottom-8
+      md:bottom-24
+      xl:bottom-32
+      -z-10
+      bg-gradient-to-b
+      from-amber-400
+      to-amber-600
+      "></div>
       <div class="container">
         <img src="./assets/couch.png" alt="Coach">
         <img src="./assets/app.svg" alt="app">
