--- a/index.html
+++ b/index.html
@@ -151,9 +151,32 @@
       from-amber-400
       to-amber-600
       "></div>
-      <div class="container">
-        <img src="./assets/couch.png" alt="Coach">
-        <img src="./assets/app.svg" alt="app">
+      <div class="container
+      mx-auto
+      grid
+      grid-rows-1
+      place-items-end
+      px-2
+      ">
+        <img src="./assets/couch.png" class="
+        row-start-1
+        row-end-2
+        col-start-1
+        col-end-2
+        mx-auto
+        " alt="Coach">
+
+        <img src="./assets/app.svg" class="
+        row-start-1
+        row-end-2
+        col-start-1
+        col-end-2
+        mx-auto
+        w-40
+        sm:w-52
+        md:w-64
+        lg:w-72
+        " alt="app">
       </div>
     </header>
     <script type="module" src="/main.js"></script>
