--- a/index.html
+++ b/index.html
@@ -179,6 +179,18 @@
         " alt="app">
       </div>
     </header>
+
+    <main class="
+    grid
+    gap-12
+    sm:gap-16
+    md:gap-24
+    lg:gap-32
+    px-8
+    overflow-hidden
+    ">
+
+    </main>
     <script type="module" src="/main.js"></script>
 </body>
 
