--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
          flex-col
          gap-4
          absolute
+         z-40
          right-0
          left-0
          top-16
@@ -189,6 +190,34 @@
     px-8
     overflow-hidden
     ">
+    <a href="#" class="
+    py-2
+    px-6
+    bg-amber-400
+    dark:text-neutral-900
+    mx-auto
+    my-12
+    flex
+    gap-2
+    shadow-xl
+    hover:shadow-none
+    transition-shadow
+    focus:outline-none
+    focus-visible:ring-4
+    ring-neutral-900
+    rounded-md
+    ring-offset-4
+    ring-offset-white
+    dark:ring-amber-400
+    dark:ring-offset-neutral-800
+    
+    ">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 7.5h-.75A2.25 2.25 0 004.5 9.75v7.5a2.25 2.25 0 002.25 2.25h7.5a2.25 2.25 0 002.25-2.25v-7.5a2.25 2.25 0 00-2.25-2.25h-.75m-6 3.75l3 3m0 0l3-3m-3 3V1.5m6 9h.75a2.25 2.25 0 012.25 2.25v7.5a2.25 2.25 0 01-2.25 2.25h-7.5a2.25 2.25 0 01-2.25-2.25v-.75" />
+      </svg>
+      
+      <span>Download The App</span>
+    </a>
 
     </main>
     <script type="module" src="/main.js"></script>
