--- a/index.html
+++ b/index.html
@@ -219,6 +219,17 @@
       <span>Download The App</span>
     </a>
 
+    <section aria-labelledby="qualities" class="relative">
+      <h2 id="qualities" class="sr-only"> Our Qualities</h2>
+      <div class="container">
+        <div class="grid">
+          <div>
+            
+          </div>
+        </div>
+      </div>
+    </section>
+
     </main>
     <script type="module" src="/main.js"></script>
 </body>
