--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
     <section aria-labelledby="qualities" class="relative">
       <h2 id="qualities" class="sr-only"> Our Qualities</h2>
-      <div class="container">
+      <div class="container mx-auto max-w-5xl flex gap-12 flex-wrap items-start justify-center md:justify-between">
         <div class="grid">
           <div>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-24 h-24">
