--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
     <section aria-labelledby="qualities" class="relative">
       <h2 id="qualities" class="sr-only"> Our Qualities</h2>
       <div class="container mx-auto max-w-5xl flex gap-12 flex-wrap items-start justify-center md:justify-between">
-        <div class="grid">
-          <div>
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-24 h-24">
+        <div class="grid gap-4 justify-items-center text-center md:flex-1">
+          <div class="rounded-full border-8 border-amber-400 p-4">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-14 h-14">
               <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
             </svg>
           </div>
-          <h3>Safe</h3>
+          <h3 class="text-3xl font-bold">Safe</h3>
           <p>Our products are secure and private out-of-the-box</p>
         </div>
       </div>
