--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
               <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
             </svg>
           </div>
-          <h3 class="text-3xl font-bold">Safe</h3>
-          <p>Our products are secure and private out-of-the-box</p>
+          <h3 class="text-3xl font-bold">Efficient</h3>
+          <p>Feel good about your wallet and the Environment</p>
         </div>
 
         <div class="grid gap-4 justify-items-center text-center md:flex-1">
@@ -248,8 +248,8 @@
               <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
             </svg>
           </div>
-          <h3 class="text-3xl font-bold">Safe</h3>
-          <p>Our products are secure and private out-of-the-box</p>
+          <h3 class="text-3xl font-bold">Proven</h3>
+          <p>Leading the Smart Home world for 10 year </p>
         </div>
       </div>
     </section>
