--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
     </a>
 
     <section aria-labelledby="qualities" class="relative">
-      <img src="./assets/dots.svg" alt="">
-      
+      <img src="./assets/dots.svg" alt="" class="hidden lg:block absolute top-1/2 -translate-y-1/2 -left-24 xl:-left-7" >
+
       <h2 id="qualities" class="sr-only"> Our Qualities</h2>
       <div class="container mx-auto max-w-5xl flex gap-12 flex-wrap items-start justify-center md:justify-between">
         <div class="grid gap-4 justify-items-center text-center md:flex-1">
