--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             
           </div>
           <h3 class="text-3xl font-bold">Proven</h3>
-          <p>Leading the Smart Home world for 10 year </p>
+          <p>Leading The Smart Home World for 10 year </p>
         </div>
       </div>
     </section>
