--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </svg>
           </div>
           <h3 class="text-3xl font-bold">Safe</h3>
-          <p>Our products are secure and private out-of-the-box</p>
+          <p>Our Products are secure and private out-of-the-box</p>
         </div>
 
         <div class="grid gap-4 justify-items-center text-center md:flex-1">
@@ -243,7 +243,7 @@
             
           </div>
           <h3 class="text-3xl font-bold">Efficient</h3>
-          <p>Feel good about your wallet and the Environment</p>
+          <p>Feel good about your Wallet and the Environment</p>
         </div>
 
         <div class="grid gap-4 justify-items-center text-center md:flex-1">
