--- a/index.html
+++ b/index.html
@@ -259,6 +259,14 @@
       </div>
     </section>
 
+    <section aria-labelledby="partners" class="text-center grid gap-8 place-items-center">
+      <div class="grid gap-4">
+        <h2 id="partners" class="text-4xl font-bold text-amber-400">Our Partners</h2>
+
+      </div>
+
+    </section>
+
     </main>
     <script type="module" src="/main.js"></script>
 </body>
