--- a/index.html
+++ b/index.html
@@ -262,6 +262,9 @@
     <section aria-labelledby="partners" class="text-center grid gap-8 place-items-center">
       <div class="grid gap-4">
         <h2 id="partners" class="text-4xl font-bold text-amber-400">Our Partners</h2>
+        <p class="w-full max-w-lg font-semibold" >
+          We've Partnered with hundreds of smart home brands to help you Create a smart home that fits your needs and doesn't lock you in.
+        </p>
 
       </div>
 
