--- a/index.html
+++ b/index.html
@@ -267,6 +267,11 @@
         </p>
 
       </div>
+      <div class="flex flex-wrap justify-center gap-8 md:gap-x-16 max-w-2xl mx-auto">
+        <div class="p-4 bg-white dark:bg-neutral-600 shadow-md dark:shadow-xl rounded-md">
+          <img src="./assets/partner1.svg" alt="" class="h-16 w-16">
+        </div>
+      </div>
 
     </section>
 
