--- a/index.html
+++ b/index.html
@@ -268,8 +268,32 @@
 
       </div>
       <div class="flex flex-wrap justify-center gap-8 md:gap-x-16 max-w-2xl mx-auto">
-        <div class="p-4 bg-white dark:bg-neutral-600 shadow-md dark:shadow-xl rounded-md">
+        <div class="p-4 bg-white shadow-md dark:shadow-xl rounded-md">
           <img src="./assets/partner1.svg" alt="" class="h-16 w-16">
+        </div>
+
+        <div class="p-4 bg-white shadow-md dark:shadow-xl rounded-md">
+          <img src="./assets/partner2.svg" alt="" class="h-16 w-16">
+        </div>
+
+        <div class="p-4 bg-white shadow-md dark:shadow-xl rounded-md">
+          <img src="./assets/partner3.svg" alt="" class="h-16 w-16">
+        </div>
+
+        <div class="p-4 bg-white shadow-md dark:shadow-xl rounded-md">
+          <img src="./assets/partner4.svg" alt="" class="h-16 w-16">
+        </div>
+
+        <div class="p-4 bg-white shadow-md dark:shadow-xl rounded-md">
+          <img src="./assets/partner5.svg" alt="" class="h-16 w-16">
+        </div>
+
+        <div class="p-4 bg-white shadow-md dark:shadow-xl rounded-md">
+          <img src="./assets/partner6.svg" alt="" class="h-16 w-16">
+        </div>
+
+        <div class="p-4 bg-white shadow-md dark:shadow-xl rounded-md">
+          <img src="./assets/partner7.svg" alt="" class="h-16 w-16">
         </div>
       </div>
 
