--- a/index.html
+++ b/index.html
@@ -299,6 +299,18 @@
 
     </section>
 
+    <section aria-labelledby="home" class="relative">
+      <div class="flex flex-wrap-reverse gap-8 justify-center">
+        <div class="flex gap-6 flex-wrap flex-col items-start lg:justify-center">
+
+          <div>
+
+          </div>
+        </div>
+        <img src="./assets/table.png" alt="">
+      </div>
+    </section>
+
     </main>
     <script type="module" src="/main.js"></script>
 </body>
