--- a/index.html
+++ b/index.html
@@ -303,9 +303,40 @@
       <div class="flex flex-wrap-reverse gap-8 justify-center">
         <div class="flex gap-6 flex-wrap flex-col items-start lg:justify-center">
 
-          <div>
+          <div class="flex flex-wrap flex-col items-start gap-2">
+            <h2 class="text-4xl font-bold">
+              Relax, You're Home
+            </h2>
+            <p class="max-w-md">
+              All our supported hardware includes traditional inputr so you can intergrate our products into your best for everyonne
+            </p>
 
           </div>
+
+          <a href="#" class="
+          py-2
+          px-6
+          bg-amber-400
+          dark:text-neutral-900
+          mx-auto
+          my-12
+          flex
+          gap-2
+          shadow-xl
+          hover:shadow-none
+          transition-shadow
+          focus:outline-none
+          focus-visible:ring-4
+          ring-neutral-900
+          rounded-md
+          ring-offset-4
+          ring-offset-white
+          dark:ring-amber-400
+          dark:ring-offset-neutral-800
+          
+          ">
+            Download The App
+          </a>
         </div>
         <img src="./assets/table.png" alt="">
       </div>
