--- a/index.html
+++ b/index.html
@@ -318,8 +318,6 @@
           px-6
           bg-amber-400
           dark:text-neutral-900
-          mx-auto
-          my-12
           flex
           gap-2
           shadow-xl
@@ -340,6 +338,9 @@
         </div>
         <img src="./assets/table.png" alt="">
       </div>
+
+      <div class="absolute -bottom-6 -right-32 -z-10 aspect-square md:border-8 border-amber-400 rounded-full md:w-64 lg:w-96 xl:max-w-lg"></div>
+      <div></div>
     </section>
 
     </main>
