--- a/index.html
+++ b/index.html
@@ -340,10 +340,18 @@
       </div>
 
       <div class="absolute -bottom-6 -right-32 -z-10 aspect-square md:border-8 border-amber-400 rounded-full md:w-64 lg:w-96 xl:max-w-lg"></div>
-      <div></div>
+      <div class="bg-teal-900 h-24 xl:h-48 -mx-8 mt-12 xl:mt-0 xl:absolute w-screen -bottom-8 -z-10"></div>
     </section>
 
     </main>
+
+    <section aria-labelledby="contact" class="container mx-auto px-8 overflow-hidden">
+      <div class="flex flex-wrap justify-center gap-12 md:gap6 lg:gap-20">
+        <div class="md:flex-1 md:max-w-sm relative">
+          
+        </div>
+      </div>
+    </section>
     <script type="module" src="/main.js"></script>
 </body>
 
