--- a/index.html
+++ b/index.html
@@ -348,8 +348,24 @@
     <section aria-labelledby="contact" class="container mx-auto px-8 overflow-hidden">
       <div class="flex flex-wrap justify-center gap-12 md:gap6 lg:gap-20">
         <div class="md:flex-1 md:max-w-sm relative">
-          
+
         </div>
+        <form class="relative
+        border-8
+        border-neutral-900
+        p-6
+        rounded-lg
+        grid
+        gap-8
+        md:flex-1
+        my-4
+        md:my-12
+        lg:my-16
+        bg-white
+        dark:bg-neutral-800
+        w-full
+
+        "></form>
       </div>
     </section>
     <script type="module" src="/main.js"></script>
