--- a/index.html
+++ b/index.html
@@ -355,8 +355,10 @@
           px-6
           bg-amber-400
           dark:text-neutral-900
+          w-max
           mx-auto
-          my-12
+          mt-12
+          md:mb-12
           flex
           gap-2
           shadow-xl
@@ -378,6 +380,8 @@
             
             <span>Download The App</span>
           </a>
+
+          <img src="./assets/app.svg" alt="app" width="240" class="hidden md:block drop-shadow-xl absolute left-1/2 -translate-x-1/2 max-w-16">
 
         </div>
         <form class="relative
